# process-metalign

./: README.md  analysis_notebook.ipynb  main.py  main_analysis.py  pyproject.toml
data/: RurutuSoilNewTemplate(1).txt  leaf_phenotype.csv
src/: assign_lineage_codes.py  create_tables.py  fill_tables.py  generate_plots.py  make_rows.py  metalign_analysis.py  my_decorators.py  preprocess_data.py  queries.py  sql_tables.py
src/diversity_stats/: calc_stats.py  make_plot.py  stacked_plots.py  statistics.py
