[project]
name = "process-metalign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-bio>=0.6.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap>=0.1.1",
]
